--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Web Developer</p>
+        <h1>MANJUL JOSHIe</h1>
+        <p>GRAPHIC DESIGNER</p>
     </header>
 
     <section id="about">
