--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Write a brief about yourself here.</p>
+        <p>A self-driven and meticulous B. Tech Graduate in Electronics and Communication Engineering, seeking a full time position in a reputable organization, in which the personal abilities I possess, can assist with the implementation of innovative ideas, creativity, and skills. To add creativity
+and resourceful working to achieve the corporations success, as well as the success for myself as a valuable representative..</p>
     </section>
 
     <section id="projects">
