--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>MANJUL JOSHIe</h1>
+        <h1>MANJUL JOSHI</h1>
         <p>GRAPHIC DESIGNER</p>
     </header>
 
