--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ and resourceful working to achieve the corporations success, as well as the succ
 
     <section id="projects">
         <h2>Projects</h2>
-        <p>Describe your projects and provide links.</p>
+        <p>My Project #1 </p>
     </section>
 
     <footer>
