--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ and resourceful working to achieve the corporations success, as well as the succ
 
     <section id="projects">
         <h2>Projects</h2>
-        <p>My Project #1 
-        https://drive.google.com/file/d/1OlURkFhnUpQ5SVU4JPNjGDbRh49t0wbk/view?usp=sharing</p>
+        <p>My Project #1 </p>
+            <p></p>https://drive.google.com/file/d/1OlURkFhnUpQ5SVU4JPNjGDbRh49t0wbk/view?usp=sharing</p>
     </section>
 
     <footer>
