--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ and resourceful working to achieve the corporations success, as well as the succ
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; 2023 Manjul Joshi </p>
     </footer>
 </body>
 </html>
