--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>MANJUL JOSHI</h1>
+        <h1>[![Typing SVG](https://readme-typing-svg.demolab.com?font=Fira+Code&duration=3000&pause=100&color=FF31ED&width=500&lines= Manjul Joshi)](https://git.io/typing-svg)
+</h1>
         <p>GRAPHIC DESIGNER</p>
     </header>
 
