--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h> MANJUL JOSHI </h>
+        <h> MANJUL JOSHI 🙋‍♂️</h>
         <p>GRAPHIC DESIGNER</p>
     </header>
 
