--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Your Name - Portfolio</title>
+    <title> MANJUL JOSHI - PORTFOLIO </title>
 </head>
 <body>
     <header>
         <h> MANJUL JOSHI 🙋‍♂️</h>
-        <p>GRAPHIC DESIGNER</p>
+        <p> Graphic Designer </p>
     </header>
 
     <section id="about">
-        <h2>About Me</h2>
-        <p>A self-driven and meticulous B. Tech Graduate in Electronics and Communication Engineering, seeking a full time position in a reputable organization, in which the personal abilities I possess, can assist with the implementation of innovative ideas, creativity, and skills. To add creativity
+        <h2>About Me ⬇️ </h2>
+        <p> <h2>A</h2> self-driven and meticulous B. Tech Graduate in Electronics and Communication Engineering, seeking a full time position in a reputable organization, in which the personal abilities I possess, can assist with the implementation of innovative ideas, creativity, and skills. To add creativity
 and resourceful working to achieve the corporations success, as well as the success for myself as a valuable representative..</p>
     </section>
 
