--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
     <section id="about">
         <h2>About Me ⬇️ </h2>
-        <p> <h2>A</h2> self-driven and meticulous B. Tech Graduate in Electronics and Communication Engineering, seeking a full time position in a reputable organization, in which the personal abilities I possess, can assist with the implementation of innovative ideas, creativity, and skills. To add creativity
+        <p> A self-driven and meticulous B. Tech Graduate in Electronics and Communication Engineering, seeking a full time position in a reputable organization, in which the personal abilities I possess, can assist with the implementation of innovative ideas, creativity, and skills. To add creativity
 and resourceful working to achieve the corporations success, as well as the success for myself as a valuable representative..</p>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
-        <p>My Project #1 </p>
+     <p> Click to see My "<a href="https://drive.google.com/file/d/1OlURkFhnUpQ5SVU4JPNjGDbRh49t0wbk/view?usp=sharing"> 1st Project</a>" </p>
     </section>
 
     <footer>
